k8s/infrastructure/controllers/argo-rollouts/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    io.cilium/lb-ipam-ips: "10.25.150.224" # Changed from .220 to avoid conflict with internal gateway
spec:
  ports:
  - port: 80
    targetPort: 3100
  selector:
    app.kubernetes.io/name: argo-rollouts
  type: LoadBalancer
