k8s/infrastructure/controllers/argo-rollouts/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "rollouts.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
